--- a/Js_PRATICE/Project_8_Snake-Water-Gun/style.css
+++ b/Js_PRATICE/Project_8_Snake-Water-Gun/style.css
@@ -1,4 +1,10 @@
 img{
-   height: 100px;
-   width: 100px;
+   height: 400px;
+   width: 400px;
+}
+@media only screen and (min-width: 600px){
+   img{
+      height: 100px;
+      width: 100px;
+   }
 }
