--- a/Js_PRATICE/Project_8_Snake-Water-Gun/style.css
+++ b/Js_PRATICE/Project_8_Snake-Water-Gun/style.css
@@ -1,8 +1,8 @@
 img{
-   height: 400px;
-   width: 400px;
+   height: 200px;
+   width: 200px;
 }
-@media only screen and (min-width: 600px){
+@media only screen and (max-width:720px){
    img{
       height: 100px;
       width: 100px;
